--- a/src/app/components/entrepreneur-conf/entrepreneur-conf.component.html
+++ b/src/app/components/entrepreneur-conf/entrepreneur-conf.component.html
@@ -1,1 +1,132 @@
-<p>entrepreneur-conf works!</p>
+
+<!-- ======= Mobile nav toggle button ======= -->
+<i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+
+<!-- ======= Header ======= -->
+<header id="header">
+    <div class="d-flex flex-column">
+
+        <div class="profile">
+            <img src="../../../assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+            <h1 class="text-light"><a href="../../../index.html">Alex Smith</a></h1>
+            <div class="social-links mt-3 text-center">
+
+                <!--Realizar click y que se vea la info-->
+
+                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            </div>
+        </div>
+
+        <nav id="navbar" class="nav-menu navbar">
+            <ul>
+                <li><a routerLink="/profile" href="influencerView.html" class="nav-link scrollto active"><i
+                        class="bx bx-user"></i> <span>Perfil</span></a>
+                </li>
+                <li><a routerLink="/colab" href="influencerRepo.html" class="nav-link scrollto"><i
+                        class="bx bx-stats"></i> <span>Colaboraciones</span></a>
+                </li>
+                <li><a routerLink="/calification" href="influencerCal.html" class="nav-link scrollto"><i
+                        class="bx bx-file-blank"></i> <span>Calificaciones</span></a>
+                </li>
+                <li><a routerLink="/config" href="influencerConfig.html" class="nav-link scrollto"><i
+                        class="bx bx-pencil"></i> <span>Mi cuenta</span></a>
+                </li>
+                <li><a href="login.html" class="nav-link scrollto"><i class="bi bi-power"></i>
+                    <span>Cerrar sesión</span></a>
+                </li>
+            </ul>
+        </nav><!-- .nav-menu -->
+    </div>
+</header><!-- End Header -->
+
+<main id="main">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2>Company configuration</h2>
+            <br>
+            <form  class="section-title">
+                     <p class="col-lg-12 d-md-flex align-items-md-stretch form-group"> Company name *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" class="form-control" placeholder="Company Name *" value=""
+                                               name="name"/>
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Description *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <textarea type="text" class="form-control" placeholder="Description" value=""
+                                                  name="description"></textarea>
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Cateogry *</p>
+                <select class="col-12 form-control" style="margin-bottom: 20px"
+                onchange="document.getElementById('displayValue').value=this.options[this.selectedIndex].text; document.getElementById('idValue').value=this.options[this.selectedIndex].value;">
+                    <option value="" disabled selected hidden>category*</option>
+                    <option value="1">one</option>
+                    <option value="2">two</option>
+                    <option value="3">three</option>
+                    <option value="4">four</option>
+                    <option value="5">five</option>
+                </select>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Company Email *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="email" class="form-control" placeholder="Company Email *" value=""
+                    name="email"/>
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Web domain *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" class="form-control" placeholder="Web Domain " value=""
+                                               name="web_domain"/>
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Address *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" class="form-control" placeholder="Address" value=""
+                    name="address"/>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Company phone*</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" minlength="8" maxlength="10" class="form-control"
+                    placeholder="Company phone *" value="" name="contact_number"/>
+                </div>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <h6>User photo</h6>
+                    <input type="file" accept="image/png, image/gif, image/jpeg">
+                </div>
+                <div>
+                    <h6>Company logo</h6>
+                    <input type="file" accept="image/png, image/gif, image/jpeg">
+                </div>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <small id="emailHelp" class="form-text text-muted ">Update u company on "about me" </small>
+                </div>
+                <button type="submit" class="btn btn-primary">
+                    Update
+                </button>
+                </div>
+            </form>
+        </div>
+    </section><!-- End About Section -->
+
+
+</main><!-- End #main -->
+
+<!-- ======= Footer ======= -->
+<footer id="footer">
+    <div class="container">
+        <div class="copyright">
+            Influencer<strong> Colaboratory<span></span></strong>
+        </div>
+        <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+
+        </div>
+    </div>
+</footer><!-- End  Footer -->
+
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
