--- a/src/app/components/register-company/register-company.component.html
+++ b/src/app/components/register-company/register-company.component.html
@@ -46,12 +46,12 @@
                                         <option value="5">five</option>
                                     </select>
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Your Email *" value=""
+                                        <input type="email" class="form-control" placeholder="Company Email *" value=""
                                                name="email" required/>
                                     </div>
                                     <div class="form-group">
                                         <input type="text" minlength="8" maxlength="10" class="form-control"
-                                               placeholder="Your Phone *" value="" name="contact_number" required/>
+                                               placeholder="Company phone *" value="" name="contact_number" required/>
                                     </div>
                                     <div>
                                         <h5>Companie photo</h5>
