--- a/src/app/components/influencer-collaboration/influencer-collaboration.component.html
+++ b/src/app/components/influencer-collaboration/influencer-collaboration.component.html
@@ -1,131 +1,64 @@
 <main id="main">
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
-        <!--Esta se puede usar para las colaboraciones o historial pero si hay que sacarle provecho-->
-        <div class="section-title">
-          <h2>Colaboration</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-  
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-web">Cosmetic</li>
-              <li data-filter=".filter-app">Technology</li>
-              <li data-filter=".filter-card">Food</li>
-              <li data-filter=".filter-web">Sports</li>
-              <li data-filter=".filter-web">Home</li>
-            </ul>
-          </div>
-        </div>
-  
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/PSG-Futbol.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/PSG-Futbol.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/Manchester-futbol.jpg"class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/Manchester-futbol.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/Hotdog-comida.jpg"class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/Hotdog-comida.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/RealMadird_futbol.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/RealMadird_futbol.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/portfolio-7.jpg"data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/Fideos_comida.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/Fideos_comida.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <label for="exampleFormControlFile1">Name</label>
-              <img src="./../../../assets/img/colaboratory/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="./../../../assets/img/colaboratory/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-  
-        </div>
-  
+  <section class="section " id="section3">
+    <div class="container">
+      <div class="section-heading">
+        <h2>Types of the weather</h2>
+        <div class="line-dec"></div>
+        <span>Some samples of different  types of ... </span>
       </div>
-    </section><!-- End Portfolio Section -->
+      <div class="row">
+        <div class="isotope-wrapper">
+          <div class="isotope-toolbar">
+            <label><button class="active" data-type="*" name="isotope-filter" ></button>
+              <span>All</span></label>
+            <label><button class=""  data-type="dry" name="isotope-filter" ></button>
+              <span>Dry weather</span></label>
+            <label><button class=""  data-type="temperate" name="isotope-filter" ></button>
+              <span>Temperate weather</span></label>
+            <label><button class=""  data-type="polar" name="isotope-filter" ></button>
+              <span>Polar weather</span></label>
+          </div>
+          <div class="isotope-box">
+            <div class="isotope-item" data-type="dry">
+              <figure>
+                <img src="https://www.worldatlas.com/r/w960-q80/upload/8b/e7/81/shutterstock-525888652.jpg" alt="sq-sample26" />
+              </figure>
+          </div>
+  
+            <div class="isotope-item" data-type="temperate">
+              <figure>
+                <img src="https://www.worldatlas.com/r/w960-q80/upload/84/e9/90/shutterstock-371213029.jpg" alt="sq-sample26" />
+              </figure>
+            </div>
+  
+            <div class="isotope-item" data-type="temperate">
+              <figure>
+                <img src="https://www.worldatlas.com/r/w960-q80/upload/b0/0c/82/shutterstock-1054865435.jpg" alt="sq-sample26" />
+              </figure>
+            </div>
+  
+            <div class="isotope-item" data-type="polar">
+              <figure>
+                <img src="https://www.worldatlas.com/r/w960-q80/upload/0c/ed/99/shutterstock-67393744.jpg" alt="sq-sample26" />
+              </figure>
+            </div>
+  
+            <div class="isotope-item" data-type="temperate">
+              <figure>
+                <img src="https://www.worldatlas.com/r/w960-q80/upload/29/b9/94/shutterstock-662889487.jpg" alt="sq-sample26" />
+              </figure>
+            </div>
+  
+            <div class="isotope-item" data-type="dry">
+              <figure>
+                <img src="https://www.worldatlas.com/r/w960-q80/upload/00/ff/23/shutterstock-1925893916.jpg" alt="galdiator" />
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
   </main><!-- End #main -->
   
